{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 19,
  "lineage": "858018a6-d06f-c416-f48e-c6e539b82cf3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eks_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:221428707951:internet-gateway/igw-0f685584938329eed",
            "id": "igw-0f685584938329eed",
            "owner_id": "221428707951",
            "tags": {
              "Name": "prime-video-eks-cluster-igw",
              "Project": "poc18"
            },
            "tags_all": {
              "Name": "prime-video-eks-cluster-igw",
              "Project": "poc18"
            },
            "vpc_id": "vpc-07f80b655958d7c3d"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:221428707951:route-table/rtb-063d0bde0ab95ddc8",
            "id": "rtb-063d0bde0ab95ddc8",
            "owner_id": "221428707951",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f685584938329eed",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prime-video-eks-cluster-public-rt",
              "Project": "poc18"
            },
            "tags_all": {
              "Name": "prime-video-eks-cluster-public-rt",
              "Project": "poc18"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f80b655958d7c3d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.eks_igw",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-076b29cc995482988",
            "route_table_id": "rtb-063d0bde0ab95ddc8",
            "subnet_id": "subnet-045bedf00aaee06ed"
          },
          "dependencies": [
            "aws_internet_gateway.eks_igw",
            "aws_route_table.eks_public_rt",
            "aws_subnet.eks_public_subnets",
            "aws_vpc.eks_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0597f9bebb9db618c",
            "route_table_id": "rtb-063d0bde0ab95ddc8",
            "subnet_id": "subnet-08d63e0fc5d1c4538"
          },
          "dependencies": [
            "aws_internet_gateway.eks_igw",
            "aws_route_table.eks_public_rt",
            "aws_subnet.eks_public_subnets",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:221428707951:security-group/sg-02ccb0728ee1a5a5a",
            "description": "Security group for EKS cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02ccb0728ee1a5a5a",
            "ingress": [],
            "name": "prime-video-eks-cluster-cluster-sg",
            "name_prefix": "",
            "owner_id": "221428707951",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prime-video-eks-cluster-cluster-sg",
              "Project": "poc18"
            },
            "tags_all": {
              "Name": "prime-video-eks-cluster-cluster-sg",
              "Project": "poc18"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f80b655958d7c3d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:221428707951:subnet/subnet-045bedf00aaee06ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-045bedf00aaee06ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "221428707951",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prime-video-eks-cluster-public-subnet-1",
              "Project": "poc18",
              "kubernetes.io/cluster/prime-video-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "prime-video-eks-cluster-public-subnet-1",
              "Project": "poc18",
              "kubernetes.io/cluster/prime-video-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07f80b655958d7c3d"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:221428707951:subnet/subnet-08d63e0fc5d1c4538",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d63e0fc5d1c4538",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "221428707951",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prime-video-eks-cluster-public-subnet-2",
              "Project": "poc18",
              "kubernetes.io/cluster/prime-video-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "prime-video-eks-cluster-public-subnet-2",
              "Project": "poc18",
              "kubernetes.io/cluster/prime-video-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07f80b655958d7c3d"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:221428707951:vpc/vpc-07f80b655958d7c3d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0950eaa2dfa27fdd8",
            "default_route_table_id": "rtb-08411aafd3aa660e2",
            "default_security_group_id": "sg-0122dd21e8c0f708c",
            "dhcp_options_id": "dopt-0fdd72d82c5b4cf86",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07f80b655958d7c3d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08411aafd3aa660e2",
            "owner_id": "221428707951",
            "tags": {
              "Name": "prime-video-eks-cluster-vpc",
              "Project": "poc18",
              "kubernetes.io/cluster/prime-video-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "prime-video-eks-cluster-vpc",
              "Project": "poc18",
              "kubernetes.io/cluster/prime-video-eks-cluster": "shared"
            }
          }
        }
      ]
    }
  ]
}